<resources>
    <string name="app_name">Driver</string>

    <string name="tv_menu_profile">Profile</string>
    <string name="tv_menu_archive">Archive</string>
    <string name="tv_menu_schedule">Schedule</string>
    <string name="tv_menu_map">Map</string>
    <string name="login">Login</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="tv_sch_f_schedule">Schedule</string>
    <string name="enter_the_code">Enter the code</string>
    <string name="secret_code">Enter the code that was sent to</string>

    <string name="appBar_title_profile">Profile</string>
    <string name="appBar_title_archive">Archive</string>
    <string name="appBar_title_suggestions">Suggestions</string>

    <string name="profile_notif">Notification</string>
    <string name="profile_contact">Contact us</string>
    <string name="profile_aboutus">About us</string>
    <string name="profile_settings">Settings</string>
    <string name="profile_logout">Logout</string>

    <string name="appbar_title_edit_profile">Edit Profile</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="vehicle_id">Vehicle ID</string>
    <string name="name">Name</string>
    <string name="city">City</string>
    <string name="day_off">Day Off</string>

    <string name="tv_title_contact_us">Contact us</string>
    <string name="et_hint_subject">Subject</string>

    <string name="tv_beneficiaries">Beneficiaries</string>

    <string name="tv_attended">Attended</string>
    <string name="tv_absent">Absent</string>

    <string name="btn_daily">Daily</string>
    <string name="btn_all">All</string>
    <string name="tv_itinerary">Itinerary </string>
    <string name="btn_start">Start </string>
    <string name="tab_saturday">Saturday </string>
    <string name="tab_sunday">Sunday </string>
    <string name="tab_monday">Monday </string>
    <string name="tab_tuesday">Tuesday </string>
    <string name="tab_wednesday">Wednesday </string>
    <string name="tab_thursday">Thursday </string>
    <string name="tv_settings">Settings </string>
    <string name="tv_sound">Sound </string>
    <string name="tv_language">Language </string>
    <string name="btn_english">English</string>
    <string name="btn_arabic">Arabic</string>
    <string name="tv_fontSize">Font size</string>
    <string name="btn_save">Save</string>
    <string name="didn_t_get_otp_resend">Didn\'t get OTP? <b><u>Resend</u></b></string>
    <string name="send">Send</string>
    <string name="palestine_code">+970</string>
    <string name="sending">Sending</string>
    <string name="verify">Verify</string>
    <string name="verifying">Verifying</string>
    <string name="ok">Ok</string>
    <string name="determine_the_accuracy_of_your_location">Determine the accuracy of your location</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="onboarding_image" />
    <string name="title_activity_about_us">AboutUsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="tv_aboutus">About us</string>
    <string name="notifacation_describtion">you want to see Beneficiaries location?!</string>
    <string name="tv_content">Running since 2012, this project focuses on addressing the specific transport needs of people with face disabilities, and has shown itself as vital to the lives of many residents of the Gaza Strip. The service provided increases the accessibility of education and rehabilitation services across the Gaza Strip, and people have come to rely upon the services provided. The project directly helps around 230 people, including university students and employees who are unable to transport themselves to and from their commitments.</string>
    <string name="btn_email">Email</string>
    <string name="btn_phone">Phone</string>

    <string name="arch_adapter_total">Total: </string>

    <string name="num_change_success">Phone Number Has Been Updated</string>
    <string name="num_change_error">Wrong Code</string>
    <string name="schedule_prog_title">Schedule Uploading</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to logout</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="end_journey">End</string>
</resources>