<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sea_green"
    tools:context=".ui.fragments.schedule.ScheduleFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"

        >

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_120sdp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_sch_f_schedule"
                    android:textSize="@dimen/_12ssp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:textColor="@color/white"
                    />

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_90sdp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:background="@drawable/shape_edged_rec"
        >

        <TextView
            android:id="@+id/tv_schedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/tv_sch_f_schedule"
            android:textSize="@dimen/_20ssp"
            android:textColor="@color/black_t_sch"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_20sdp"
            />

        <RadioGroup
            android:id="@+id/rg_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_schedule"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_15sdp"
            >

            <RadioButton
                android:id="@+id/rbtn_daily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_daily"
                android:textSize="@dimen/_14ssp"
                android:paddingVertical="@dimen/_11sdp"
                android:paddingHorizontal="@dimen/_42sdp"
                android:button="@android:color/transparent"
                android:background="@drawable/radio_selector"
                android:textColor="@drawable/text_color"
                android:layout_marginEnd="@dimen/_5sdp"
                />
            <RadioButton
                android:id="@+id/rbtn_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_all"
                android:textSize="@dimen/_14ssp"
                android:paddingVertical="@dimen/_11sdp"
                android:paddingHorizontal="@dimen/_42sdp"
                android:button="@android:color/transparent"
                android:background="@drawable/radio_selector"
                android:textColor="@drawable/text_color"
                android:layout_marginStart="@dimen/_5sdp"
                />

        </RadioGroup>

        <FrameLayout
            android:id="@+id/container_schedule"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/rg_buttons"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginHorizontal="@dimen/_17sdp"
            />




    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>










<!--    android:layout_height="@dimen/_118sdp"-->
